This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/4/18: Got size restrictions on frame alignment sets working correctly for
K3.  Allowed post-actions with K3 if StartupDelay is at least 0.5.

11/4/18: Fixed handling of probe mode and defocus/beam changes, broken 10.21.

10/29/18: Added focus, stage, and screen control to scope control panel.

10/29/18: Images from a Dumb Falcon 3 (no advanced scripting) are scaled by
exposure time.

10/29/18: Inverted direction of focus and Z height changes on Hitachi because
tilting is around the Y, not the X, axis.

10/21/18: Allowed continuous mode to be used for mag IS offset calibration and
enabled everything but mag button in scope control panel during this cal.

10/21/18: In continuous mode, enabled scope control panel during and made it
blank beam during operations like mag change that make transients.

10/21/18: Added alpha to low dose summary line and alpha spinner to scope
control panel.

10/21/18: Adjusted for fact that there is no nanoprobe in low mag mode.

10/17/18: Fixed a bug that crashed program trying to display custom hole
pattern when no regular hole patteren had been set up.

10/17/18: Added property to set a detector on JEOL to insert/retract
complementary to main screen.

10/17/18: Added a parameter validation call for OneView.

10/14/18: Fixed bug when saving frames with K3 and using a binning that
requires trimming the image returned to SerialEM.

10/14/18: When doing an early return with no return image, made it not roll
buffers and make another copy of the last image in A.

10/10/18: Added ability to delay setting IS after an external mag change on
JEOL.

10/10/18: Saved K2 and other direct detector processing modes (linear vs.
counting) in non-low-dose states.
