@@ -849,8 +849,8 @@ void CMultiTSTasks::MakeAutocenConset(AutocenParams * param)
   conSets[TRACK_CONSET].bottom = bottom * param->binning;
 }
 
-// Autocenter beam
-int CMultiTSTasks::AutocenterBeam(void)
+// Autocenter beam: takes an optional maximu radius in microns
+int CMultiTSTasks::AutocenterBeam(float maxRadius)
 {
   int magInd, spotSize, probe;
   int bestMag, bestSpot;
@@ -859,6 +859,7 @@ int CMultiTSTasks::AutocenterBeam(void)
   AutocenParams *param;
   LowDoseParams *ldParm;
   FilterParams *filtParm = mWinApp->GetFilterParams();
+  mAcMaxRadius = maxRadius;
     
   if (mWinApp->LowDoseMode()) {
     ldParm = mWinApp->GetLowDoseParams() + TRIAL_CONSET;
@@ -935,13 +936,20 @@ int CMultiTSTasks::AutocenterBeam(void)
 // The next task is simply to center the beam based on the image
 void CMultiTSTasks::AutocenNextTask(int param)
 {
+  double radius = 0.;
+  float pixel;
   if (!mAutoCentering)
     return;
 
   // If an image was taken, center beam with it
   if (!param) {
     mImBufs->mCaptured = BUFFER_TRACKING;
-    mWinApp->mProcessImage->CenterBeamFromActiveImage(0., 0., mAcUseCentroid > 0);
+    if (mAcMaxRadius > 0.) {
+      pixel = mShiftManager->GetPixelSize(mImBufs);
+      if (pixel)
+        radius = mAcMaxRadius * 1000. / pixel;
+    }
+    mWinApp->mProcessImage->CenterBeamFromActiveImage(radius, 0., mAcUseCentroid > 0);
   }
 
   // Need another shot if screen was raised or centroid being used; save and set 
